--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "eslint": "node_modules/.bin/eslint src/*.js test.js",
-	"test": "mocha",
-	"prebuild": "npm run eslint & npm run test",
+    "test": "mocha",
+    "prebuild": "npm run clean & npm run eslint & npm run test",
     "build": "babel src -d build",
     "clean": "rm -rf build"
   },
@@ -27,7 +27,6 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "chai": "^4.2.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
